--- a/pages/all/all.wxml
+++ b/pages/all/all.wxml
@@ -2,13 +2,13 @@
 <page>
   <view class="page">
     <view class="page__hd">
-      <image style="width: 750rpx; height: 300rpx" src="../../image/demo.jpg"></image>
+      <image style="width: 750rpx; height: 300rpx" src="../../image/demo.png"></image>
     </view>
     <view class="weui-panel weui-panel__hd">全部景区</view>
     <view class="page__hd"  bindtap="jumpTo">
       <a class="weui-media-box weui-media-box_appmsg">
         <view class="weui-media-box__hd">
-          <image class="weui-media-box__thumb" src="../../image/demo.jpg" alt></image>
+          <image class="weui-media-box__thumb" src="../../image/demo.png" alt></image>
         </view>
         <view class="weui-media-box__bd">
           <h4 class="weui-media-box__title">周恩来祖居</h4>
@@ -17,7 +17,7 @@
       </a>
       <a class="weui-media-box weui-media-box_appmsg">
         <view class="weui-media-box__hd">
-          <image class="weui-media-box__thumb" src="../../image/demo.jpg" alt></image>
+          <image class="weui-media-box__thumb" src="../../image/demo.png" alt></image>
         </view>
         <view class="weui-media-box__bd">
           <h4 class="weui-media-box__title">蔡元培故居</h4>
@@ -26,7 +26,7 @@
       </a>
       <a class="weui-media-box weui-media-box_appmsg">
         <view class="weui-media-box__hd">
-          <image class="weui-media-box__thumb" src="../../image/demo.jpg" alt></image>
+          <image class="weui-media-box__thumb" src="../../image/demo.png" alt></image>
         </view>
         <view class="weui-media-box__bd">
           <h4 class="weui-media-box__title">秋瑾故居</h4>
@@ -35,7 +35,7 @@
       </a>
       <a class="weui-media-box weui-media-box_appmsg">
         <view class="weui-media-box__hd">
-          <image class="weui-media-box__thumb" src="../../image/demo.jpg" alt></image>
+          <image class="weui-media-box__thumb" src="../../image/demo.png" alt></image>
         </view>
         <view class="weui-media-box__bd">
           <h4 class="weui-media-box__title">大通学堂</h4>
@@ -44,7 +44,7 @@
       </a>
       <a class="weui-media-box weui-media-box_appmsg">
         <view class="weui-media-box__hd">
-          <image class="weui-media-box__thumb" src="../../image/demo.jpg" alt></image>
+          <image class="weui-media-box__thumb" src="../../image/demo.png" alt></image>
         </view>
         <view class="weui-media-box__bd">
           <h4 class="weui-media-box__title">鲁迅故里</h4>
