--- a/pages/narrator/narrator.wxml
+++ b/pages/narrator/narrator.wxml
@@ -5,14 +5,14 @@
       <view class="weui-panel__hd">
         <a class="weui-media-box weui-media-box_appmsg">
           <view class="weui-media-box__hd">
-            <image class="weui-media-box__thumb" style="height: 400rpx" src="../../image/demo.jpg" alt></image>
+            <image class="weui-media-box__thumb" style="height: 400rpx" src="{{narrator.img_url}}" alt></image>
           </view>
           <view class="weui-media-box__bd">
             <text style="font-size: 40rpx; opacity:1">草堂之声，雨润万物\n</text>
-            <text style="font-size: 30rpx; opacity:0.7">讲解时长100分钟 讲解18条\n</text>
-            <text style="font-size: 35rpx; opacity:1">张三\t</text>
-            <text style="font-size: 30rpx; opacity:0.7">\t五星级讲解员\n</text>
-            <text style="font-size: 30rpx; color: red; opacity:0.7">此处后续增加评分</text>
+            <text style="font-size: 30rpx; opacity:0.7">讲解时长100分钟 讲解{{content_count}}条\n</text>
+            <text style="font-size: 35rpx; opacity:1">{{narrator.name}}\t</text>
+            <text style="font-size: 30rpx; opacity:0.7">\t{{narrator.title}}\n</text>
+            <text style="font-size: 30rpx; color: red; opacity:0.7">评分：{{narrator.score}}</text>
           </view>
         </a>
       </view>
@@ -20,23 +20,23 @@
     <view class="page__hd">
       <view class="weui-panel__hd">
         <h4 class="weui-media-box__title">讲解指南</h4><text>\n</text>
-        <text style="font-size: 25rpx;">　　张三，中国人最耳熟能详的名字。张三可能真有其人，但更多时候与李四、王五一起指代不特定的某个人，揶揄或者概括常用。例如古代说书人常说：那张三的李四的都来了。也常被用在文学影视作品中。因此名平常普通，近来也被用来指代一个普通人群体，即“张三族”。
+        <text style="font-size: 25rpx;">{{narrator.explain_overview}}
         </text>
       </view>
     </view>
-    <view class="page__hd">
-      <view class="weui-panel__hd">
-        <h4 class="weui-media-box__title" style="color: red">1 草堂概况</h4><text>\n</text>
-        <image style="width: 680rpx; height: 340rpx" src="../../image/demo11.jpg"></image>
-        <text style="font-size: 25rpx;">1 - 1 概况(试听)\n</text>
-        <view>
-          <view class='audiosBox'>
+
+    <view class="weui-panel__hd" wx:for="{{content_count}}" wx:for-index="index" wx:for-item="item" wx:key="*this">
+      <h4 class="weui-media-box__title" style="color: red">{{index+1}} {{content_list[index].title}}</h4><text>\n</text>
+      <image style="width: 680rpx; height: 340rpx" src="{{content_list[index].title_img}}"></image>
+      <text style="font-size: 25rpx;" wx:if="{{index==0}}">试听\n</text>
+      <view wx:if="{{index==0 || isPayed}}">
+        <view class='audiosBox'>
           <view class="audioOpen" bindtap="listenerButtonPlay" wx:if="{{!isOpen}}">
             <image class='image2' src="../../image/play.png" />
           </view>
-          <view class="audioOpen" bindtap="listenerButtonPause" wx:if="{{isOpen}}">
-            <image src="../../image/pause.png" />
-          </view>
+        <view class="audioOpen" bindtap="listenerButtonPause" wx:if="{{isOpen}}">
+          <image src="../../image/pause.png" />
+        </view>
           <view class='slid'>
             <slider bindchange="sliderChange"  block-size="12px" step="2" value="{{offset}}" max="{{max}}" selected-color="#4c9dee" />
             <view>
@@ -44,73 +44,17 @@
               <text class='times'>{{duration}}</text>   <!-- 总时长 -->
             </view>
           </view>
-          </view>
-          <view style="display: flex;align-items: center;vertical-align: center;justify-content: center;flex-direction:row;">
-            <video 
-              id="myVideo" 
-              src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" 
-              binderror="videoErrorCallback" 
-              show-center-play-btn='{{true}}' 
-              show-play-btn="{{true}}" 
-              controls
-              picture-in-picture-mode="{{['push', 'pop']}}"
-              bindenterpictureinpicture='bindVideoEnterPictureInPicture'
-              bindleavepictureinpicture='bindVideoLeavePictureInPicture'
-            ></video>
-          </view>
         </view>
-
       </view>
-    </view>
-
-    <view class="page__hd">
-      <view class="weui-panel__hd">
-        <h4 class="weui-media-box__title" style="color: red">2 前门</h4><text>\n</text>
-        <image style="width: 680rpx; height: 340rpx" src="../../image/demo11.jpg"></image>
-        <text style="font-size: 25rpx;">2 - 1 概况\n</text>
-        <!--以下是支付的显示-->
-        <view wx:if="{{isPayed}}">
-          <view class='audiosBox'>
-            <view class="audioOpen" bindtap="listenerButtonPlay" wx:if="{{!isOpen}}">
-              <image class='image2' src="../../image/play.png" />
-            </view>
-            <view class="audioOpen" bindtap="listenerButtonPause" wx:if="{{isOpen}}">
-              <image src="../../image/pause.png" />
-            </view>
-            <view class='slid'>
-              <slider bindchange="sliderChange"  block-size="12px" step="2" value="{{offset}}" max="{{max}}" selected-color="#4c9dee" />
-              <view>
-                <text class='times'>{{starttime}}</text> <!-- 进度时长 -->
-                <text class='times'>{{duration}}</text>   <!-- 总时长 -->
-              </view>
-            </view>
+      <view wx:else>
+        <a class="weui-media-box weui-media-box_appmsg">
+          <view class="">
+            <image class="weui-media-box__thumb" style="height: 50rpx;width: 50rpx;border-radius: 50rpx" src="../../image/lock.png" alt></image>
           </view>
-          <view style="display: flex;align-items: center;vertical-align: center;justify-content: center;flex-direction:row;">
-            <video 
-              id="myVideo" 
-              src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" 
-              binderror="videoErrorCallback" 
-              show-center-play-btn='{{true}}' 
-              show-play-btn="{{true}}" 
-              controls
-              picture-in-picture-mode="{{['push', 'pop']}}"
-              bindenterpictureinpicture='bindVideoEnterPictureInPicture'
-              bindleavepictureinpicture='bindVideoLeavePictureInPicture'
-            ></video>
+          <view>
+            <text style="font-size: 30rpx; color: red; opacity:0.7">　购买后解锁哦</text>
           </view>
-        </view>
-        <!--以下是未支付的显示-->
-        <view wx:else>
-          <a class="weui-media-box weui-media-box_appmsg">
-            <view class="">
-              <image class="weui-media-box__thumb" style="height: 50rpx;width: 50rpx;border-radius: 50rpx" src="../../image/lock.png" alt></image>
-            </view>
-            <view>
-              <text style="font-size: 30rpx; color: red; opacity:0.7">　购买后解锁哦</text>
-            </view>
-          </a>
-        </view>
-
+        </a>
       </view>
     </view>
 
