--- a/pages/all/all.wxml
+++ b/pages/all/all.wxml
@@ -3,12 +3,9 @@
   <view class="page">
     <view class="page__hd">
       <!--<image style="width: 750rpx; height: 300rpx" src="{{top_img}}"></image>-->
-      <swiper autoplay="true" interval="2000">
-        <swiper-item>
-          <image src='http://47.114.120.151/images/xuanchuanye.JPG' height="150" mode='widthFix' class='img' />
-        </swiper-item>
-        <swiper-item>
-          <image src='http://47.114.120.151/images/xuanchuanye2.JPG' height="150" mode='widthFix' class='img' />
+      <swiper autoplay="true" interval="2000" style="width: 100%; height: 350rpx">
+        <swiper-item wx:for="{{top_img_list}}" wx:for-index="index" wx:for-item="item" wx:key="*this">
+          <image src='{{item}}' mode='widthFix' class='img' />
         </swiper-item>
       </swiper>
     </view>
