--- a/app.wxss
+++ b/app.wxss
@@ -10,3 +10,12 @@
   padding: 200rpx 0;
   box-sizing: border-box;
 } 
+
+.background {
+  width: 100%;
+  height: 100%;
+  position:fixed; 
+  background-size:100% 100%;
+  z-index: -1;
+  opacity: 0.3;
+}
