--- a/pages/orders/orders.wxml
+++ b/pages/orders/orders.wxml
@@ -1,5 +1,7 @@
 <!--pages/orders/orders.wxml-->
 <view class="page">
+  <image class='background' src="../../image/background.jpg" mode="aspectFill"></image>
+<!--
   <view class="page__bd page__bd_spacing" wx:for="{{order_count}}" wx:for-index="index" wx:for-item="item" wx:key="*this">
 		<view class="weui-flex">
 			<view class="weui-flex__item" style="display: flex; justify-content: center;">
@@ -48,7 +50,55 @@
     </view>
     <view class="weui-panel__hd" style="margin-bottom: 20rpx;"></view>
   </view>
+-->
+  <view class="weui-panel__hd" wx:for="{{order_count}}" wx:for-index="index" wx:for-item="item" wx:key="*this" style="padding: 0rpx; margin: 0rpx; font-weight: 400">
+    <a class="weui-media-box weui-media-box_appmsg">
+      <view class="weui-media-box__hd" style="height: 150rpx; width: 150rpx; padding: 0; display: flex;">
+        <image style="height: 150rpx; width: 150rpx; border-radius: 150rpx;" src="{{order_list[index].attraction_img}}"></image>
+      </view>
 
+      <view class="weui-media-box__bd">
+        <view class="weui-flex" style="margin: auto">
+          <view class="weui-flex__item" style="font-size: 30rpx; display: flex; margin-top: 7rpx;">
+            {{order_list[index].attraction_name}}
+          </view>
+          <view class="weui-flex__item" style="font-size: 25rpx; display: flex;">
+            <view style="font-size: 25rpx; display: flex; margin-left: 10rpx; margin-top: 7rpx;">讲解：</view>
+            <view>
+              <image style="height: 50rpx; width: 50rpx; border-radius: 50rpx;" src="{{order_list[index].narrator_img}}"></image>
+            </view>
+            <view style="font-size: 25rpx; display: flex; margin-left: 10rpx; margin-top: 7rpx;">{{order_list[index].narrator_name}}</view>
+          </view>
+        </view>
+        <view class="weui-flex" style="margin: auto">
+        </view>
+        <view class="weui-flex" style="margin: auto">
+          <view class="weui-flex__item" style="font-size: 27rpx; display: flex; margin-top: 7rpx;">
+            下单时间：
+          </view>
+          <view class="weui-flex__item" style="font-size: 25rpx; display: flex;">
+            <view style="font-size: 25rpx; display: flex; margin-left: 10rpx; margin-top: 7rpx;">{{order_list[index].time}}</view>
+          </view>
+        </view>
+        <view class="weui-flex" style="margin: auto">
+          <view class="weui-flex__item" style="font-size: 27rpx; display: flex; margin-top: 7rpx;">
+            订单金额：
+          </view>
+          <view class="weui-flex__item" style="font-size: 30rpx; display: flex; color: red;padding-left: 11rpx">
+          ￥{{order_list[index].price}}.00
+          </view>          
+
+        </view>
+        <view class="weui-flex" style="margin: auto">
+          <view class="weui-flex__item">
+            <view style="font-size: 25rpx; margin-left: 131rpx">
+              <button class="btn" hover-class="btn_hover" data-index="{{index}}" bindtap="jumpTo">进入讲解</button>
+            </view>
+          </view>
+        </view>
+      </view>
+    </a>
+  </view>
   
 
 </view>
