--- a/pages/narrator/narrator.wxml
+++ b/pages/narrator/narrator.wxml
@@ -1,11 +1,12 @@
 <!--pages/demo1/demo1.wxml-->
 <page>
+  <image class='background' src="../../image/background.jpg" mode="aspectFill"></image>
+
   <view class="page">
-    <view class="page__hd">
       <view class="weui-panel__hd">
         <a class="weui-media-box weui-media-box_appmsg">
-          <view class="weui-media-box__hd">
-            <image class="weui-media-box__thumb" style="height: 400rpx" src="{{narrator.img_url}}" alt></image>
+          <view class="weui-media-box__hd" style="height: 220rpx; width: 150rpx;">
+            <image class="weui-media-box__thumb" src="{{narrator.img_url}}" style="border-radius: 15rpx;" alt></image>
           </view>
           <view class="weui-media-box__bd">
             <text style="font-size: 40rpx; opacity:1">草堂之声，雨润万物\n</text>
@@ -16,7 +17,7 @@
           </view>
         </a>
       </view>
-    </view>
+
     <view class="page__hd">
       <view class="weui-panel__hd">
         <h4 class="weui-media-box__title">讲解指南</h4><text>\n</text>
@@ -26,8 +27,8 @@
     </view>
 
     <view class="weui-panel__hd" wx:for="{{content_count}}" wx:for-index="index" wx:for-item="item" wx:key="*this">
-      <h4 class="weui-media-box__title" style="color: red">{{index+1}} {{content_list[index].title}}</h4><text>\n</text>
-      <image style="width: 680rpx; height: 340rpx" src="{{content_list[index].title_img}}"></image>
+      <view class="weui-media-box__title" style="color: red; margin-bottom: 15rpx;">{{index+1}} {{content_list[index].title}}</view>
+      <image style="width: 680rpx; height: 340rpx; border-radius: 20rpx;" src="{{content_list[index].title_img}}"></image>
       <text style="font-size: 25rpx;" wx:if="{{index==0}}">试听\n</text>
       <view wx:if="{{index==0 || isPayed}}">
         <view class='audiosBox'>
@@ -37,7 +38,7 @@
         <view class="audioOpen" bindtap="listenerButtonPause" data-index="{{index}}" wx:if="{{content_list[index].is_open}}">
           <image class='image_pause' src="../../image/pause.png" />
         </view>
-          <view class='slid'>
+          <view class='slid' style="margin-top: 35rpx">
             <slider bindchange="sliderChange" data-index="{{index}}"  block-size="12px" step="1" value="{{content_list[index].offset}}" max="{{content_list[index].max}}" selected-color="#4c9dee" />
             <view>
               <text class='times'>{{content_list[index].start_time}}</text> <!-- 进度时长 -->
@@ -46,7 +47,7 @@
           </view>
         </view>
       </view>
-      <view wx:else bindtap="jumpToPreview">
+      <view wx:else bindtap="jumpToPreview" class="audiosBox">
         <a class="weui-media-box weui-media-box_appmsg">
           <view class="">
             <image class="weui-media-box__thumb" style="height: 50rpx;width: 50rpx;border-radius: 50rpx" src="../../image/lock.png" alt></image>
