--- a/pages/narrator/narrator.wxss
+++ b/pages/narrator/narrator.wxss
@@ -3,7 +3,7 @@
 .audiosBox{
   width: 92%;
   margin: auto;
-  height: 90rpx;
+  height: 97rpx;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -11,6 +11,17 @@
   z-index:0;
   border-radius: 20rpx;
 }
+.audiosBox_2{
+  width: 92%;
+  margin: auto;
+  height: 97rpx;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index:0;
+  border-radius: 20rpx;
+}
+
 /*按钮大小  */
 .audioOpen{
   width: 70rpx;
@@ -22,18 +33,37 @@
   justify-content: center;
   margin-left: 20rpx;
 }
- 
+
+.audioOpen_2{
+  width: 70rpx;
+  height: 65rpx;
+  border-radius: 50%;
+  display: flex;
+
+  margin-left: 20rpx;
+}
+
 .image_play{
   width: 30rpx;
   height: 40rpx;
   margin-left: 10%;
+}
 
+.image_play_1{
+  width: 50rpx;
+  height: 50rpx;
 }
 
 .image_pause{
   width: 30rpx;
   height: 40rpx;
 }
+
+.image_pause_1{
+  width: 50rpx;
+  height: 50rpx;
+}
+
 /*进度条长度  */
 .slid{
   flex: 1;
@@ -46,14 +76,21 @@
 .slid view>text:nth-child(1){
   color: #4c9dee;
   margin-left:6rpx; 
+  text-align: left;
 }
 .slid view>text:nth-child(2){
   margin-right:6rpx; 
+  text-align: right;
 }
-slider{
+.slider_1{
   width: 520rpx;
   margin: 0;
   margin-left: 35rpx;
+}
+.slider_2{
+  width: 330rpx;
+  margin: 7rpx 0 0 0;
+  margin-left: 15rpx;
 }
 /*横向布局  */
 .times{
@@ -71,8 +108,25 @@ slider{
 
 .add_icon{
   position: fixed;
-  width:70rpx;
-  height:70rpx;
+  width:80rpx;
+  height:80rpx;
   bottom: 70rpx;
-  right: 70rpx;
+  right: 50rpx;
+  background-color: #ffffff;
+  border-radius: 70rpx;
+  opacity: 1;
+  z-index: 1;
+  scale: 0.9;
+}
+
+.shadow {
+  box-shadow:2rpx 3rpx 3rpx 4rpx rgba(87, 86, 86, 0.288);
+}
+
+.view_panel {
+  border-top: 0;
+  border-right: 0;
+  border-left: 0;
+  border-style: solid;
+  border-bottom: 1px solid #989fa71c;
 }
